latex2mmlc/src/snapshots/latex2mmlc__tests__left_right_different_stretch.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\left/\\frac12\\right)"
---
<math>
    <mrow>
        <mo stretchy="true">/</mo>
        <mfrac>
            <mn>1</mn>
            <mn>2</mn>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
