latex2mmlc/src/snapshots/latex2mmlc__tests__long_number.snap
---
source: latex2mmlc/src/lib.rs
expression: "3,453,435.3453"
---
<math>
    <mn>3,453,435.3453</mn>
</math>
