latex2mmlc/src/snapshots/latex2mmlc__tests__mathbf_with_digit.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathbf{1234}"
---
<math>
    <mi>𝟏𝟐𝟑𝟒</mi>
</math>
