latex2mmlc/src/snapshots/latex2mmlc__tests__mathbf_with_digit_decimal.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathbf{1234.5}"
---
<math>
    <mi>𝟏𝟐𝟑𝟒.𝟓</mi>
</math>
