latex2mmlc/src/snapshots/latex2mmlc__tests__mathbf_with_digit_dot.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathbf{1234.}"
---
<math>
    <mrow>
        <mi>𝟏𝟐𝟑𝟒</mi>
        <mi>.</mi>
    </mrow>
</math>
