latex2mmlc/src/snapshots/latex2mmlc__tests__mathit_of_max.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
<math>
    <mrow>
        <mi>𝑎𝑏</mi>
        <mi>max</mi>
        <mi>𝛼𝛽</mi>
    </mrow>
</math>
