latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_nested.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathit{\\mathrm{a}b}"
---
<math>
    <mi>a𝑏</mi>
</math>
