latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_nested2.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathrm{\\mathit{a}b}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi mathvariant="normal">b</mi>
    </mrow>
</math>
