latex2mmlc/src/snapshots/latex2mmlc__tests__mathrm_nested3.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
<math>
    <mrow>
        <mi>ab</mi>
        <mi>𝑐𝑑</mi>
        <mi>ef</mi>
    </mrow>
</math>
